--- a/CC/style.css
+++ b/CC/style.css
@@ -6,11 +6,12 @@
   
   body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #a2a2a2; 
+    color: #e0e0e0; 
   }
   
   header {
-    background-color: #333;
+    background-color: #2a2a2a; 
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -28,10 +29,10 @@
   }
   
   aside {
+    height: 100vh;
     width: 200px;
-    background-color: #333;
+    background-color: #303030; 
     color: white;
-    padding: 20px;
     position: fixed;
     top: 60px;
     left: 0;
@@ -46,16 +47,30 @@
   }
   
   aside ul li a {
+    padding: 5px 10px;
     color: white;
     text-decoration: none;
     font-size: 18px;
     display: block;
-    padding: 5px 0;
   }
   
   aside ul li a:hover {
-    background-color: #555;
-    border-radius: 5px;
+    padding: 5px 10px;
+    background-color: #727272; 
+  }
+
+  .divider {
+    height: 1px;
+    background-color: #727272; 
+    margin: 10px 0;
+  }
+
+  .description {
+    padding: 20px;
+    background-color: #303030; 
+    color: #fafafa; 
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   main {
@@ -69,7 +84,31 @@
   }
   
   #assignment {
+    color: #303030;
     display: block;
+  }
+  
+  .tile-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .tile {
+    background-color: #303030; 
+    color: #fafafa;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  }
+  
+  .tile:hover {
+    transform: scale(1.05);
   }
   
   @media (max-width: 768px) {
@@ -88,3 +127,4 @@
       width: 100%;
     }
   }
+  
